[package]
name = "indexer_rs"
version = "0.1.0"
edition = "2021"
authors = ["0xMaster <guijiewan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json="1.0"
web3 = "0.19.0"
dotenv = "0.15.0"
anyhow = "1.0.33"
scylla = {version = "0.9.0", features = ["ssl", "cloud"]}
tokio = { version = "1.32.0", features = ["full"] }
