[package]
name = "indexer_rs"
version = "0.1.0"
edition = "2021"
authors = ["0xMaster <guijiewan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json="1.0"
web3 = "0.19.0"
dotenv = "0.15.0"
anyhow = { version = "1.0.75", features = [] }
scylla = {version = "0.10.0", features = ["ssl", "cloud"]}
tokio = { version = "1.32.0", features = ["full"] }
fstrings = "0.2"
ethabi = "18.0.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0.1"
